# Basis GraphQL schema voor een dierenasiel
# Dit schema definieert de types, queries en mutaties die beschikbaar zijn in de API
scalar Date @specifiedBy(url: "https://scalars.graphql.org/andimarek/local-date")

type Pet {
  id: ID!
  name: String!
  weight: Float
  category: PetCategory!
  status: PetStatus
  photo: Photo
  dueDate: Date
  inCareOf: Customer
}

type Customer {
  username: ID!
  name: String!
  dateCreated: Date
  currentPets: [Pet!]!
  checkoutHistory: [Checkout!]!
}

type Photo {
  full: String
  thumb: String
}

type Checkout {
  pet: Pet
  checkOutDate: Date!
  checkInDate: Date!
  late: Boolean
}

enum PetCategory {
  CAT
  DOG
  RABBIT
  STINGRAY
}

enum PetStatus {
  AVAILABLE
  CHECKEDOUT
}



